--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@react-email/components": "^0.5.0",
     "@react-email/render": "^1.2.0",
     "@types/lodash": "^4.17.20",
@@ -36,6 +37,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "google-auth-library": "^10.2.1",
     "passport-jwt": "^4.0.1",
@@ -44,7 +46,8 @@
     "react-dom": "^19.1.1",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.0.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -66,7 +69,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.13.0",
+    "prisma": "^6.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
